# tradingpython

./: PERFORMANCE_ANALYSIS.md  README.md  SCHEMA_DESIGN.md  package-lock.json  pyproject.toml  requirements.txt
backend/: requirements.txt
backend/strategies/: serializers.py  urls.py  views.py
backend/strategies/management/commands/: run_multi_symbol_backtest.py
backend/trading_project/: urls.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: TradingDashboard.css  TradingDashboard.js
strategies/: models.py  views.py
trading_project/: asgi.py  settings.py  urls.py  wsgi.py
